# play-with-tree-sitter

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
fixtures/: Animal.js  Post.ts  User.php  models.py  user.rb
src/: lib.rs
