[package]
name = "play-with-tree-sitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.2"
tree-sitter-tags = "=0.20.0"
tree-sitter = "=0.20.0"
tree-sitter-typescript = "=0.20.0"
tree-sitter-javascript = "=0.20.0"
tree-sitter-ruby = "=0.20.0"
tree-sitter-python = "=0.20.0"

# As this crate is not (yet) published to the central registry, you will have to specify it as a git dependency, currently we suggest using the master branch.
# SEE: https://github.com/tree-sitter/tree-sitter-php/tree/master/bindings/rust
tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php.git", branch = "master" }